--- a/content/stands-building.yaml
+++ b/content/stands-building.yaml
@@ -1,153 +1,2 @@
 title: Stands
-stand_list:
-- name: K (level 1)
-  map: map_k_1
-  groups:
-  - info:
-      building: K
-      floor: 1
-      amount: 11
-      group: A
-    stands:
-    - theme: Community advocacy
-      stands:
-        all:
-        - name: Eclipse Foundation
-        - name: FOSSASIA
-        - name: Matrix.org Foundation
-        - name: Software Freedom Conservancy
-        - name: Free Software Foundation Europe
-        - name: Realtime Lounge
-        - name: Free Culture Podcasts
-        - name: Open Culture Foundation + COSCUP
-        - name: Open Toolchain Foundation
-        - name: Open UK and Book Signing Stand
-        - name: The Apache Software Foundation
-  - info:
-      building: K
-      floor: 1
-      amount: 8
-      group: B
-    stands:
-    - theme: System administration
-      stands:
-        all:
-        - name: Ansible
-        - name: Grafana
-        - name: Bareos
-        - name: Foreman
-        - name: DRLM (Disaster Recovery Linux Manager)
-        - name: OpenNebula
-    - theme: Database engines
-      stands:
-        all:
-        - name: PostgreSQL
-        - name: MariaDB Server
-  - info:
-      building: K
-      floor: 1
-      amount: 4
-      group: C
-    stands:
-    - theme: Office suites and productivity
-      stands:
-        all:
-        - name: CiviCRM
-        - name: DAVx5 – CalDAV / CardDAV / WebDAV client for Android + jtx Board
-        - name: XWiki & CryptPad
-        - name: Libreoffice
-- name: K (level 2)
-  map: map_k_2
-  groups:
-  - info:
-      building: K
-      floor: 2
-      amount: 17
-      group: A
-    stands:
-    - theme: Desktop environments
-      stands:
-        all:
-        - name: GNOME
-        - name: KDE
-    - theme: Developer environment
-      stands:
-        all:
-        - name: GitLab
-        - name: Homebrew
-        - name: Jenkins
-        - name: The Perl/Raku Foundation
-        - name: Fluence
-    - theme: Multimedia and graphics
-      stands:
-        all:
-        - name: VideoLAN
-    - theme: World wide web
-      stands:
-        all:
-        - name: Mozilla
-        - name: 'Nextcloud: Self-hosted, open file sync & communication platform'
-    - theme: Education
-      stands:
-        all:
-        - name: La Contre-Voie
-        - name: IEEE SA Open
-        - name: It's time to learn Ada!
-        - name: AlekSIS
-        - name: Chamilo
-        saturday:
-        - name: Audacity and MuseScore
-        sunday:
-        - name: IsardVDI
-- name: AW
-  map: map_aw
-  groups:
-  - info:
-      building: AW
-      floor: 1
-      amount: 9
-      group: A
-    stands:
-    - theme: Operating systems
-      stands:
-        all:
-        - name: OpenEmbedded + AGL
-        - name: GNU GRUB - CANCELLED DUE TO ILLNESS
-    - theme: Hardware
-      stands:
-        all:
-        - name: coreboot/flashrom
-        - name: PINE64
-    - theme: IoT
-      stands:
-        all:
-        - name: MicroPython & Espruino
-        - name: openHAB
-        - name: 'Embedded JavaScript: Moddable SDK & Node-RED MCU Edition'
-        - name: wolfSSL
-    - theme: HAM Radio
-      stands:
-        all:
-        - name: infobooth on amateur radio (hamradio)
-- name: H
-  map: map_h
-  groups:
-  - info:
-      building: H
-      floor: 1
-      amount: 9
-      group: A
-    stands:
-    - theme: Operating systems
-      stands:
-        all:
-        - name: AlmaLinux OS
-        - name: Debian
-        - name: Fedora Project
-        - name: CentOS and RDO
-        - name: FreeBSD Project
-        - name: Linux on Mobile (Sailfish OS, Ubuntu Touch, postmarketOS, Mobian and
-            more)
-        - name: openSUSE Project
-        - name: Ubuntu Ecosystem
-        - name: Gentoo
+stand_list: []
