changed kicad event registration info

--- a/content/fringe-events.yaml
+++ b/content/fringe-events.yaml
@@ -62,7 +62,7 @@ events:
         start: 2024-02-02
         end: 2024-02-02
         cost: Free
-        registration: None
+        registration: Recommended for space and food
         website: https://forms.gle/9cDo2tj2CWpD66mB9
         contact: codingday@kicad.org
     'CHAOSScon Europe 2024':
