--- a/content/fringe-events.yaml
+++ b/content/fringe-events.yaml
@@ -113,3 +113,12 @@ events:
         registration: Put your name on https://elinux.org/Buildroot:DeveloperDaysFOSDEM2024
         website: https://elinux.org/Buildroot:DeveloperDaysFOSDEM2024
         contact: buildroot@buildroot.org
+    'FOSDEM PGDay':
+        location: Brussels Marriott
+        start: 2024-02-02
+        end: 2024-02-02
+        cost: €60
+        registration: None
+        website: https://2024.fosdempgday.org/about/
+        contact: contact@fosdempgday.org
+
