open media and AI community happy hour event added to fringe

--- a/content/fringe-events.yaml
+++ b/content/fringe-events.yaml
@@ -177,3 +177,12 @@ events:
         registration: None
         website: https://blog.freecad.org/2023/10/31/fosdem-freecad-day-and-hackathon-2024/
         contact: yorik@freecad.org
+    'Open Media, AI & Machine Learning HAPPY HOUR':
+        location: Market Bar - Rue Alphonse De Witte 12, 1050 Bruxelles, Belgium
+        start: 2023-02-04
+        end: 2023-02-04
+        cost: 
+        registration: Please register through the event link as space is limited. https://lu.ma/t0pyb95z 
+        website: https://lu.ma/t0pyb95z
+        contact: shannon@livepeer.org
+
