open media and AI community happy hour minor change

--- a/content/fringe-events.yaml
+++ b/content/fringe-events.yaml
@@ -181,7 +181,7 @@ events:
         location: Market Bar - Rue Alphonse De Witte 12, 1050 Bruxelles, Belgium
         start: 2023-02-04
         end: 2023-02-04
-        cost: 
+        cost: Free
         registration: Please register through the event link as space is limited. https://lu.ma/t0pyb95z 
         website: https://lu.ma/t0pyb95z
         contact: shannon@livepeer.org
